[package]
name = "yacrd"
version = "0.6.1"
authors = ["Pierre Marijon <pierre.marijon@inria.fr>"]
edition = '2018'

exclude = ["image/*", "tests/*"]

description = "Using all-against-all read mapping, yacrd performs: computation of pile-up coverage for each read and detection of chimeras"
homepage = "https://github.com/natir/yacrd"
repository = "https://github.com/natir/yacrd"
readme = "Readme.md"
license = "MIT"
keywords = ["bioinformatics", "chimera", "long-read", "scrubbing"]

[badges]
travis-ci = { repository = "natir/yacrd", branch = "master" }

[dependencies]
bio            = "0.30"
csv            = "1"
log 	       = "0.4"
anyhow         = "1"
niffler        = "2"
thiserror      = "1"
structopt      = "0.3"
env_logger     = "0.7"
 
[dev-dependencies]
tempfile = "3.1"

[profile.release]
# debug = true # uncomment for proffiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false

[[bin]]
name = "yacrd"
path = "src/main.rs"
