[package]
name = "yacrd"
version = "1.0.0"
authors = ["Pierre Marijon <pierre.marijon@inria.fr>"]
edition = '2021'

exclude = ["image/*", "tests/*"]

description = "Using all-against-all read mapping, yacrd performs: computation of pile-up coverage for each read and detection of chimeras"
homepage = "https://github.com/natir/yacrd"
repository = "https://github.com/natir/yacrd"
readme = "Readme.md"
license = "MIT"
keywords = ["bioinformatics", "chimera", "long-read", "scrubbing"]

[dependencies]
noodles        = { version = "0.18", features = ["fasta", "fastq"] }
csv            = { version = "1" }
log 	       = "0.4"
sled           = "0.34"
clap           = { version = "3", features = ["derive"] }
serde          = { version = "1", features = ["derive"] }
rayon          = "1"
anyhow         = "1"
bincode        = "1"
niffler        = "2"
thiserror      = "1"
env_logger     = "0.9"
rustc-hash     = "1"
remove_dir_all = "0.7"

[dev-dependencies]
tempfile       = "3"

[profile.release]
#debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false

[[bin]]
name = "yacrd"
path = "src/main.rs"
